--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-community/slider": "4.4.2",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
+    "native-color-picker": "^1.3.5",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.5",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^19.0.0"
+    "expo-crypto": "~12.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
