--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app-qr",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -12,14 +12,27 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/slider": "4.4.2",
     "expo": "~49.0.13",
+    "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-linking": "~5.0.2",
+    "expo-radio-button": "^1.0.8",
+    "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
     "native-color-picker": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-color-picker": "^0.6.0",
+    "react-native-crypto-js": "^1.0.0",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.10.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-qrcode-svg": "^6.2.0",
+    "react-native-rsa-native": "^2.0.5",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "expo-crypto": "~12.4.1"
+    "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
