--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
@@ -18,6 +19,8 @@
     "expo-radio-button": "^1.0.8",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^49.0.0",
     "native-color-picker": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,5 +40,11 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
+  }
 }
