--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "expo-barcode-scanner": "~12.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
