--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^29.2.1",
     "jest-expo": "^49.0.0",
     "native-color-picker": "^1.3.5",
+    "firebase": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
