--- a/package.json
+++ b/package.json
@@ -3,29 +3,33 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/slider": "4.4.2",
+    "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.13",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-linking": "~5.0.2",
+    "expo-localization": "^14.5.0",
     "expo-radio-button": "^1.0.8",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.1.0",
+    "i18n-js": "^4.3.2",
     "jest": "^29.2.1",
     "jest-expo": "^49.0.0",
     "native-color-picker": "^1.3.5",
-    "firebase": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-color-picker": "^0.6.0",
     "react-native-crypto-js": "^1.0.0",
     "react-native-dropdown-picker": "^5.4.6",
@@ -37,7 +41,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.17.0",
-    "expo-barcode-scanner": "~12.5.3"
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
